# pvz_rl

./: CHANGES_SUMMARY.md  FINAL_STATUS.md  Makefile  README.md  REPOSITORY_STATUS.md  REPRODUCTION_README.md  ac_quick(policy)  ac_quick(valuen)  ac_reprod(policy)  ac_reprod(policy)001000  ac_reprod(policy)010000  ac_reprod(policy)050000  ac_reprod(valuen)  ac_reprod(valuen)001000  ac_reprod(valuen)010000  ac_reprod(valuen)050000  ddqn_quick  ddqn_quick_iterations.npy  ddqn_quick_loss  ddqn_quick_rewards.npy  ddqn_reprod001000  ddqn_reprod010000  ddqn_reprod050000  ddqn_reprod_iterations.npy  ddqn_reprod_loss  ddqn_reprod_real_iterations.npy  ddqn_reprod_real_rewards.npy  ddqn_reprod_rewards.npy  ddqn_reproduction  ddqn_reproduction_iterations.npy  ddqn_reproduction_loss  ddqn_reproduction_rewards.npy  dqn_quick  dqn_quick_iterations.npy  dqn_quick_loss  dqn_quick_rewards.npy  dqn_quick_trash  dqn_quick_trash_iterations.npy  dqn_quick_trash_loss  dqn_quick_trash_real_iterations.npy  (+48 more)
agents/: __init__.py  actor_critic_agent_v3.py  ddqn_agent.py  dqn_agent.py  evaluate_agent.py  keyboard_agent.py  reinforce_agent_v2.py
doc/: reproduction_requirements.md
gym-pvz/: pyproject.toml  setup.py
gym-pvz/gym_pvz/: __init__.py
gym-pvz/gym_pvz.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gym-pvz/gym_pvz/envs/: pvz_env_v2.py
pvz/: pyproject.toml  setup.py
pvz-pkg/: pyproject.toml
pvz/pvz.egg-info/: PKG-INFO  SOURCES.txt
ref/: INF581_report.pdf.url
scripts/: evaluate_all_agents.py  generate_figures.py  generate_tables.py  quick_evaluation.py
(+5 files in other folders)
