[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvz"
version = "0.0.1"
description = "Plants vs Zombies game engine"
authors = [{name = "PVZ RL Team"}]
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["pvz"]